--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,11 +1,7 @@
 version: '3.5'
 
 services:
-  python:
-    container_name: mulvus-python
-    image: python:3.10
-    tty: true
-    stdin_open: true
+  # The milvus-etcd container does not expose any ports to the host and maps its data to volumes/etcd in the current folder.
   etcd:
     container_name: milvus-etcd
     image: quay.io/coreos/etcd:v3.5.5
@@ -22,7 +18,7 @@ services:
       interval: 30s
       timeout: 20s
       retries: 3
-
+  # The milvus-minio container serves ports 9090 and 9091 locally with the default authentication credentials and maps its data to volumes/minio in the current folder.
   minio:
     container_name: milvus-minio
     image: minio/minio:RELEASE.2023-03-20T20-16-18Z
@@ -40,15 +36,19 @@ services:
       interval: 30s
       timeout: 20s
       retries: 3
-
+  # The milvus-standalone container serves ports 19530 locally with the default settings and maps its data to volumes/milvus in the current folder.
   standalone:
     container_name: milvus-standalone
-    image: milvusdb/milvus:v2.3.1
+    image: milvusdb/milvus:latest-gpu
     command: ["milvus", "run", "standalone"]
+    runtime: nvidia
     environment:
+      NVIDIA_VISIBLE_DEVICES: all  # 모든 GPU 디바이스 사용
+      NVIDIA_DRIVER_CAPABILITIES: compute,utility
       ETCD_ENDPOINTS: etcd:2379
       MINIO_ADDRESS: minio:9000
     volumes:
+      - ./milvus.yaml:/milvus/configs/milvus.yaml
       - ${DOCKER_VOLUME_DIRECTORY:-.}/volumes/milvus:/var/lib/milvus
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9091/healthz"]
@@ -59,10 +59,13 @@ services:
     ports:
       - "19530:19530"
       - "9091:9091"
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              capabilities: ["gpu"]
+              device_ids: ["0"]
     depends_on:
       - "etcd"
       - "minio"
-
-networks:
-  default:
-    name: milvus
